Add comments for why reflection does not work for private fields after Java 9