@@ -8,8 +8,7 @@ public class HashMapSizeChange {
     public static void main(String... args) {
         // When running this code, you might encounter the following error:
         // java.lang.reflect.InaccessibleObjectException: Unable to make field transient java.util.HashMap$Node[] java.util.HashMap.table accessible: module java.base does not "opens java.util" to unnamed module
-        // To overcome it, run this with the following jvm options --add-opens java.base/java.util=ALL-UNNAMED
-        // https://stackoverflow.com/questions/70756414/java-lang-reflect-inaccessibleobjectexception-unable-to-make-field-private-fina
+        // Check comments in AccessingPrivateElements
         Map<Integer, Integer> map = new HashMap<>();
         System.out.println("Initial state of the map");
         System.out.printf("Size: 0 Underlying table is null Threshold: %-3d%n", getThreshold(map));
